--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="login-box">
-  <h2>Login</h2>
+  <h2>Enter Url to shorten</h2>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <label for="firstname" class="placeholder">
       Input URL:
